update instructions for -Djava.ext.dirs=